apps/dev/auth/dex.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dex
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  tls:
    - secretName: veidemann-tls
      hosts:
        - veidemann.test
  rules:
    - host: veidemann.test
      http:
        paths:
          - path: /dex
            pathType: Prefix
            backend:
              service:
                name: dex
                port:
                  number: 5556
