apps/dev/auth/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: veidemann-api
spec:
  tls:
    - hosts:
      - veidemann.test
      secretName: veidemann-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: veidemann-api-web
spec:
  tls:
    - hosts:
      - veidemann.test
      secretName: veidemann-tls
